fixed bug with z-index

--- a/static/overlay/css/style.css
+++ b/static/overlay/css/style.css
@@ -43,6 +43,7 @@
     height: 20px;
     top: 20px;
     right: 20px;
+    z-index: 3;
     cursor: pointer;
     transition: .45s ease-in-out;
 }
